[gd_scene load_steps=10 format=2]

[ext_resource path="res://Gui.gd" type="Script" id=1]
[ext_resource path="res://Assets/cornice1.png" type="Texture" id=2]
[ext_resource path="res://AnimatedStreets.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/borderbox.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/OldWizard.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_color = Color( 0.666667, 0.713726, 0.0941176, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Choices" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Choice1" type="Button" parent="VBoxContainer/Choices"]
margin_right = 637.0
margin_bottom = 692.0
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
flat = true

[node name="AnimatedStreets" parent="VBoxContainer/Choices/Choice1" instance=ExtResource( 3 )]
position = Vector2( 324, 339 )

[node name="Choice2" type="Button" parent="VBoxContainer/Choices"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 692.0
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
flat = true

[node name="AnimatedStreets" parent="VBoxContainer/Choices/Choice2" instance=ExtResource( 3 )]
position = Vector2( 330, 339 )

[node name="Choice3" type="Button" parent="VBoxContainer/Choices"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 692.0
size_flags_horizontal = 3
flat = true

[node name="AnimatedStreets" parent="VBoxContainer/Choices/Choice3" instance=ExtResource( 3 )]
position = Vector2( 314, 339 )

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 696.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 384 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer1"]
margin_right = 708.0
margin_bottom = 384.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_right = 708.0
custom_constants/margin_right = 25
custom_constants/margin_top = 0
custom_constants/margin_left = 25
custom_constants/margin_bottom = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer/MarginContainer"]
margin_left = 204.0
margin_right = 504.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/hseparation = 30
columns = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer"]
margin_top = 4.0
margin_right = 708.0
margin_bottom = 384.0
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="Gold" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer/HBoxContainer"]
margin_left = 219.0
margin_top = 154.0
margin_right = 267.0
margin_bottom = 225.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "$"
align = 1
valign = 1

[node name="Inv" type="Button" parent="VBoxContainer/HBoxContainer1/VBoxContainer/HBoxContainer"]
margin_left = 367.0
margin_right = 488.0
margin_bottom = 380.0
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 6 )
text = "Inv"
flat = true

[node name="Container" type="Container" parent="VBoxContainer/HBoxContainer1"]
margin_left = 712.0
margin_right = 853.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer1"]
margin_left = 857.0
margin_right = 1920.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 30
alignment = 1

[node name="Skill1" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_top = 155.0
margin_right = 1063.0
margin_bottom = 169.0

[node name="SkillName" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/Skill1"]
margin_bottom = 14.0

[node name="SkillDes" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/Skill1"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="SkillPP" type="Label" parent="VBoxContainer/HBoxContainer1/VBoxContainer2/Skill1"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Skill2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_top = 199.0
margin_right = 1063.0
margin_bottom = 199.0

[node name="Skill3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer1/VBoxContainer2"]
margin_top = 229.0
margin_right = 1063.0
margin_bottom = 229.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -378.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="mouse_entered" from="VBoxContainer/Choices/Choice1" to="." method="_on_Choice1_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Choices/Choice1" to="." method="_on_Choice1_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Choices/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="focus_exited" from="VBoxContainer/Choices/Choice2" to="." method="_on_Choice2_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/Choices/Choice2" to="." method="_on_Choice2_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Choices/Choice2" to="." method="_on_Choice2_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Choices/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Choices/Choice3" to="." method="_on_Choice3_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Choices/Choice3" to="." method="_on_Choice3_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Choices/Choice3" to="." method="_on_Choice3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer1/VBoxContainer/HBoxContainer/Inv" to="." method="_on_Inv_pressed"]
